data/derived/sp14/progs/unify/prog2473.ml.out
Characters 54-68:
  | _ -> List.hd xs + 2;;
         ^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
